# RSC-VINS

./: README.md
config/euroc/: euroc_config.yaml
config/realsense/: realsense_color_config.yaml
config/tum/: tum_config.yaml
pose_graph/: CMakeLists.txt
pose_graph/src/: parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/netvald_loop/: CMakeLists.txt  inference.py  netvlad_detector.cpp  netvlad_detector.h  netvlad_inference.cpp  netvlad_inference.h  test.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  parameters.cpp  parameters.h
vins_estimator/src/netvlad_initial/: CMakeLists.txt  netvlad_initializer.cpp  netvlad_initializer.h  run_netvlad_initializer.cpp
vins_estimator/src/netvlad_initial/EuRoC/: mh_01.h5  visualization_h5.py
vins_estimator/src/netvlad_initial/EuRoC/mh_01/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/mh_02/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/mh_03/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/mh_04/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/mh_05/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/v1_01/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/v1_02/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/v1_03/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/v2_01/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/v2_02/: truth.txt
vins_estimator/src/netvlad_initial/EuRoC/v2_03/: truth.txt
vins_estimator/src/netvlad_initial/netvlad_map/: CMakeLists.txt  map_builder.cpp  map_builder.h  run_map_builder.cpp
vins_estimator/src/utility/: visualization.cpp
